Revert "Merge pull request #1 from mallam75/devin/1773522067-upgrade-java17"
This reverts commit e2faadbba208cc5c8ea619f482e199d96ad4ce4a, reversing
changes made to 3fa9b2ec6690327e46fbfbbbe6f15f3e2b4819bd.