@@ -1,11 +1,14 @@
 package java17demo.java8;
 
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
+import java.io.IOException;
+import java.nio.charset.Charset;
 
-import jakarta.xml.bind.JAXBContext;
-import jakarta.xml.bind.JAXBException;
-import jakarta.xml.bind.Marshaller;
+import javax.xml.bind.JAXBContext;
+import javax.xml.bind.JAXBException;
+import javax.xml.bind.Marshaller;
+
+import sun.misc.BASE64Decoder;
+import sun.misc.BASE64Encoder;
 
 public class Application {
 	public static void main(String[] args) {
@@ -13,7 +16,7 @@ public class Application {
 		myAddress.setStreet("123 Main Street");
 		myAddress.setCity("Rochester");
 		myAddress.setState("MN");
-		myAddress.setZip(Integer.valueOf(55901).toString());
+		myAddress.setZip(new Integer(55901).toString());
 
 		// Convert the object to XML
 		writeXML(myAddress);
@@ -37,7 +40,8 @@ public class Application {
 	}
 
 	public static String encode(String originalString) {
-		String encodedString = Base64.getEncoder().encodeToString(originalString.getBytes(StandardCharsets.UTF_8));
+		BASE64Encoder encoder = new BASE64Encoder();
+		String encodedString = encoder.encode(originalString.getBytes());
 		System.out.println("Original String: " + originalString);
 		System.out.println("Encoded String:  " + encodedString);
 		System.out.println("**************************************");
@@ -45,8 +49,14 @@ public class Application {
 	}
 
 	public static String decode(String encodedString) {
-		byte[] decodedBytes = Base64.getDecoder().decode(encodedString);
-		String decodedString = new String(decodedBytes, StandardCharsets.UTF_8);
+		String decodedString = "";
+		try {
+			byte[] decodedBytes = new BASE64Decoder().decodeBuffer(encodedString);
+			decodedString = new String(decodedBytes, Charset.forName("UTF-8"));
+
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
 		System.out.println("Encoded String:  " + encodedString);
 		System.out.println("Decoded String:  " + decodedString);
 		System.out.println("**************************************");
